Fixed font and betting issues.
Font on the introduction screen was scaling too much when window was
resized, so a limit was set. Also, the game now does not allow for
empty bets.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -73,28 +73,24 @@ body, html {
     text-align: center;
     width: 100%;
     height: 300px;
-    top: 50%;
+    top:55%;
 }
 h1 {
     position: absolute;
     z-index: 100;
     width: 100%;
-    min-width: 800px;
     text-align: center;
     margin-bottom: 100px;
     font-family: 'Abril Fatface';
     color: #FFFFFF;
-    /*    font-size: 16px;
-*/
-    
-    font-size: 800%;
+    font-size: 130px;
     margin-top: 3vw;
 }
 #play {
     font-family: 'Abril Fatface';
     color: #e74c3c;
-    font-size: 2vmax;
-    padding: 2vw 3vw 2vw 3vw;
+    font-size: 30px;
+    padding: 30px 30px 30px 30px;
     background: #ffffff;
     border: solid #ffffff 1px;
     text-decoration: none;
@@ -115,6 +111,21 @@ h1 {
     /*  background-color:#e74c3c;
 */
     
+    overflow-x: hidden;
+    overflow-y: hidden;
+    min-height: 580px;
+    min-width: 660px;
+    max-height: 627px;
+    max-width: 1080px;
+/*    z-index: 5;
+*/}
+
+#introArea {
+    position: relative;
+    width: 80%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
     overflow-x: hidden;
     overflow-y: hidden;
     min-height: 580px;
